--- a/bearing_dashboard/.github/workflows/quality-assurance.yml
+++ b/bearing_dashboard/.github/workflows/quality-assurance.yml
@@ -4,19 +4,18 @@ on:
     - push
     - pull_request
 
-
 jobs:
     quality-assurance:
         name: Quality Assurance
         runs-on: ubuntu-latest
         container: python:3.10-slim
-
+        
         env:
-            DJANGO_SETTINGS_MODULE: "bearing_dashboard.settings"
-
+            DJANGO_SETTINGS_MODULE: bearing_dashboard.settings
 
         steps:
             - uses: actions/checkout@v4
+            
             - name: Install Dependencies
               run: |
                 python -m pip install --upgrade pip
@@ -30,5 +29,3 @@ jobs:
             - name: Run Tests
               run: |
                 pytest analysis/tests.py
-
-            
