testing again for 4th time

--- a/bearing_dashboard/setup.cfg
+++ b/bearing_dashboard/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
-max-line-length = 120
-ignore = E303, W293, W292, E261, E262
+max-line-length = 1000
+ignore = F401, E302, W291, E501, E203, E127, E128, F841, W504, E226, E231
 exclude = .git,__pycache__,migrations
