--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,7 +13,6 @@ env:
     ECR_REPOSITORY: vibration-analysis-dashboard
     ECS_SERVICE: vibration-analysis-service-2
     ECS_CLUSTER: vibration-analysis-cluster
-    ECS_TASK_DEFINITION: bearing_dashboard/.aws/task-definition.json
     CONTAINER_NAME: vibration-analysis-container
 
 jobs:
@@ -52,13 +51,20 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
+      - name: Download task definition
+        run: |
+              aws ecs describe-task-definition --task-definition vibration-analysis-task --query taskDefinition > taskdefinition.json
+  
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@c804dfbdd57f713b6c079302a4c01db7017a36fc
         with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.image }}
+            task-definition: taskdefinition.json
+            container-name: ${{ env.CONTAINER_NAME }}
+            image: ${{ steps.build-image.outputs.image }}
+  
+      - name: Update task definition file
+        run: cat ${{ steps.task-def.outputs.task-definition }} > taskdefinition.json
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@df9643053eda01f169e64a0e60233aacca83799a
