--- a/bearing_dashboard/Dockerfile
+++ b/bearing_dashboard/Dockerfile
@@ -1,29 +1,29 @@
-# Start with Python slim image - this keeps our container small
+# Start with Python
 FROM python:3.10-slim
 
-# These environment variables make Python work better in containers
+# Environment variables which make Python work better in containers
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-# Create a directory for our application
+# Create a directory for application
 WORKDIR /app
 
-# Install system packages we need
+# Install system packages 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends gcc && \
     rm -rf /var/lib/apt/lists/*
 
-# Copy and install requirements first - this improves Docker caching
+# Copy and install requirements first 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Now install gunicorn - we need this for production
+# Now install gunicorn for production
 RUN pip install gunicorn
 
-# Copy the rest of our code
+# Copy the rest of code
 COPY . .
 
-# Make our start script executable
+# Make start script executable
 RUN chmod +x /app/start.sh
 
 # Create the static files directory
@@ -32,8 +32,6 @@ RUN mkdir -p staticfiles
 # Collect static files
 RUN python manage.py collectstatic --noinput
 
-# Tell Docker what port we'll use
 EXPOSE 8000
 
-# Use gunicorn in production instead of Django's development server
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "bearing_dashboard.wsgi:application"]
